--- a/install
+++ b/install
@@ -117,8 +117,8 @@ wget -q -O /var/www/html/robots.txt https://raw.githubusercontent.com/masjeho2/c
 wget -q -O /usr/local/etc/xray/package.json https://raw.githubusercontent.com/masjeho2/xray-bot/v1/package.json
 wget -q -O /usr/local/etc/xray/adminenv https://raw.githubusercontent.com/masjeho2/xray-bot/v1/adminenv/.env
 wget -q -O /usr/local/etc/xray/agenenv https://raw.githubusercontent.com/masjeho2/xray-bot/v1/agenenv/.env
-wget -q -O /usr/local/etc/xray/bot-admin https://raw.githubusercontent.com/masjeho2/xray-bot/v1/bot-admin
-wget -q -O /usr/local/etc/xray/bot-agent https://raw.githubusercontent.com/masjeho2/xray-bot/v1/bot-agent
+wget -q -O /usr/local/etc/xray/bot-admin https://github.com/masjeho2/xray-bot/releases/download/v1.0.0/bot-admin
+wget -q -O /usr/local/etc/xray/bot-agent https://github.com/masjeho2/xray-bot/releases/download/v1.0.0/bot-agent
 #systemctl restart haproxy
 systemctl restart xray
 echo -e "${GB}[ INFO ]${NC} ${YB}Setup Done${NC}"
