--- a/install
+++ b/install
@@ -115,8 +115,8 @@ wget -q -O /usr/local/etc/xray/config.json https://raw.githubusercontent.com/mas
 wget -q -O /etc/haproxy/haproxy.cfg https://raw.githubusercontent.com/masjeho2/xray-bot/v1/haproxy.cfg
 wget -q -O /var/www/html/robots.txt https://raw.githubusercontent.com/masjeho2/conf/main/robots.txt
 wget -q -O /usr/local/etc/xray/package.json https://raw.githubusercontent.com/masjeho2/xray-bot/v1/package.json
-wget -q -O /usr/local/etc/xray/adminenv https://raw.githubusercontent.com/masjeho2/xray-bot/v1/adminenv/.env
-wget -q -O /usr/local/etc/xray/agenenv https://raw.githubusercontent.com/masjeho2/xray-bot/v1/agenenv/.env
+wget -q -O /usr/local/etc/xray/adminenv/.env https://raw.githubusercontent.com/masjeho2/xray-bot/v1/adminenv/.env
+wget -q -O /usr/local/etc/xray/agenenv/.env https://raw.githubusercontent.com/masjeho2/xray-bot/v1/agenenv/.env
 wget -q -O /usr/local/etc/xray/bot-admin https://github.com/masjeho2/xray-bot/releases/download/v1.0.0/bot-admin
 wget -q -O /usr/local/etc/xray/bot-agent https://github.com/masjeho2/xray-bot/releases/download/v1.0.0/bot-agent
 #systemctl restart haproxy
@@ -266,7 +266,8 @@ chmod +x /usr/bin/menu
 cd
 
 echo "*/5 * * * * root clear-log" >> /etc/crontab
-
+echo "*/3 * * * * root truncate -s 0 /var/log/xray/access.log" >> /etc/crontab
+echo "0 0 */7 * * root truncate -s 0 /var/log/xray-admin-mongo.log" >> /etc/crontab
 echo "0 0 */7 * * root curl -L -o /usr/local/share/xray/geoip.dat https://github.com/malikshi/v2ray-rules-dat/releases/latest/download/geoip.dat && curl -L -o /usr/local/share/xray/geosite.dat https://github.com/malikshi/v2ray-rules-dat/releases/latest/download/geosite.dat && systemctl restart xray" >> /etc/crontab
 systemctl daemon-reload
 systemctl restart cron
