--- a/install
+++ b/install
@@ -176,8 +176,8 @@ download_configurations() {
     wget -q -O /usr/local/etc/xray/agenenv/.env "${XRAY_BOT_REPO_V1}/agenenv/.env"
     
     # Binary Bot
-    wget -q -O /usr/local/etc/xray/bot-admin https://github.com/masjeho2/xray-bot/releases/download/v1.0.0/bot-admin
-    wget -q -O /usr/local/etc/xray/bot-agent https://github.com/masjeho2/xray-bot/releases/download/v1.0.0/bot-agent
+    wget -q -O /usr/local/etc/xray/bot-admin https://github.com/masjeho2/xray-bot/releases/latest/download/bot-admin
+    wget -q -O /usr/local/etc/xray/bot-agent https://github.com/masjeho2/xray-bot/releases/latest/download/bot-agent
     
     log_message "INFO" "Semua file konfigurasi berhasil diunduh."
 }
